--- a/index.html
+++ b/index.html
@@ -6,7 +6,7 @@
     <title>Google Weather App Redesign</title>
     <link rel="shortcut icon" href="./storage/img/logo.png" type="image/png">
     <link rel="stylesheet" href="./css/style.css">
-    <script type="module" defer src="js/main.js"></script>
+    <script type="module" defer src="main.js"></script>
 </head>
 <body>
    <header>
@@ -18,6 +18,10 @@
                 </div>
            </form>
             <div class="div__body">
+                <div>
+                    <label for="usuario">search city</label>
+                    <input type="text" id="city" name="location">
+                </div>
                 <div class="div__title">
                     <h1>3°</h1>
                     <span>Feels like -2°</span>
